--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="IOverse is a modern platform for AI-driven interactions and insights." />
+    <meta name="keywords" content="AI, Chatbot, OpenAI, Dashboard, Analytics, React, Django" />
+    <meta name="author" content="Salva05" />
+    <meta name="robots" content="index, follow" />
+    <title>IOverse</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
